<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contactDetailsLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_16dp">

    <ProgressBar
        android:id="@+id/progressBarForContactDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/contactDetailsPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_android_black_96dp" />

    <TextView
        android:id="@+id/contactDetailsName"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_96dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:gravity="bottom|top"
        android:text="@string/name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/title"
        app:layout_constraintStart_toEndOf="@+id/contactDetailsPhoto"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contactDetailsPhoneFirst"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/phone_first"
        android:textSize="@dimen/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactDetailsName" />

    <TextView
        android:id="@+id/contactDetailsPhoneSecond"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/phone_second"
        android:textSize="@dimen/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactDetailsPhoneFirst" />

    <TextView
        android:id="@+id/contactDetailsEmailFirst"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/email_first"
        android:textSize="@dimen/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactDetailsPhoneSecond" />

    <TextView
        android:id="@+id/contactDetailsEmailSecond"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/email_second"
        android:textSize="@dimen/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactDetailsEmailFirst" />

    <TextView
        android:id="@+id/contactDetailsDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/description"
        android:textSize="@dimen/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactDetailsEmailSecond" />

    <TextView
        android:id="@+id/contactDetailsBirthday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/birthday"
        android:textSize="@dimen/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactDetailsDescription" />

    <Switch
        android:id="@+id/contactDetailsSwitchBirthday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/notify_birthday"
        android:textSize="@dimen/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactDetailsBirthday"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>